Ensure search tags gracefully display any text overflowing

--- a/arches_her/media/css/project.css
+++ b/arches_her/media/css/project.css
@@ -1007,6 +1007,16 @@ span.rp-tile-title {
     padding: 0px;
 }
 
+.term-search-filter .select2-container--default .select2-selection--multiple .select2-selection__choice {
+    max-width: 96%;
+    text-overflow: ellipsis;
+}
+
+.term-search-filter .select2-container--default .select2-selection--multiple .select2-selection__choice button.search-tag {
+    max-width: 98%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
 
 /* STOPS top level side panels being obscured by search filter popups in search*/
 
